@@ -3,6 +3,9 @@
    it would verify if not for the flaw in the public key
  * scripts/dkimsign.pl: allow key protocol to be specified on command
    line
+ * lib/Mail/DKIM/Verifier.pm: update documentation on possible error
+   codes
+ * lib/Mail/DKIM/PublicKey.pm: cleanup error code
 
 2007-10-24: Jason Long <jlong@messiah.edu>
  * t/corpus/badkey_*.txt: changed subjects to indicate which test it is
